# torch-qml

./: .gitignore  CMakeLists.txt  README.md  check_state_type.py  pyproject.toml  setup.py  test_import.py
benchmarks/: bench_cpp_vs_python.py  bench_vs_pennylane.py
csrc/src/: state_vector.cu
examples/: hqnn_mnist.py
torchqml/: __init__.py  autograd.py  backend.py
torchqml/autograd/: __init__.py  adjoint.py  quantum_function.py
torchqml/backends/: config.py
torchqml/core/: __init__.py  module.py  parameter.py  qvector.py
torchqml/gates/: __init__.py  parametric.py  single.py  two_qubit.py
torchqml/layers/: __init__.py  strongly_entangling.py
torchqml/measure/: __init__.py  expval.py  sample.py  state.py
torchqml/operators/: __init__.py  pauli.py
torchqml/utils/: device.py  kernel_builder.py
