[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchqml"
version = "0.1.0"
description = "PyTorch-native Quantum Machine Learning with CUDA-Q backend"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/masa-whitestone/torch-qml"

[tool.setuptools.packages.find]
where = ["."]
include = ["torchqml*"]
